se agregaron carpetas de scss y se aplicaron utilidades de sass

--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -64,7 +64,7 @@
             <div class="col-12 col-lg-3 text-lg-start">
                 <h2 class="titulo-h2">Ecografia General</h2>
                 <ul class="estudios-ul">
-                    <li>Ecografia de abdomen</li>
+                    <li class=" liestudios">Ecografia de abdomen</li>
                     <li>Ecografía renal</li>
                     <li>Ecografía vesical/vesicoprostática</li>
                     <li>Ecografia testicular</li>
