--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <section class="container text-center institucional">
       <div class="row">
-        <h2 class="col-12">Institucional</h2>
-        <p class="col-12">
+        <h2 class="col-12 institucional__titulo">Institucional</h2>
+        <p class="col-12 institucional__parrafo">
           Desde 1999 hemos cimentado las bases para brindar el mejor
           servicio de diagnóstico
           por imágenes de la zona. Contamos con profesionales de alto renombre, altamente preparados en el área
@@ -75,7 +75,7 @@
 
       <div class="row">
         <div class="col-12 col-lg-6">
-          <h3 class="ubicacion-titulo">Ubicación</h3>
+          <h3 class="titulo-info">Ubicación</h3>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.4016707189667!2d-58.
       96685248506748!3d-34.16164674174783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb724a90b0
       2a5f%3A0xd18e055c7200a506!2sBeruti%20294%2C%20Campana%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!
@@ -84,7 +84,7 @@
         </div>
 
         <div class="col-12 col-lg-6 text-lg-start">
-          <h3 class="infoh3">Información de contacto</h3>
+          <h3 class="titulo-info">Información de contacto</h3>
           <ul class="informacion-index">
             <li>Dirección: Beruti 294</li>
             <li>Teléfono: 03489 427153</li>
