--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -99,16 +99,16 @@
       <div class="row">
 
         <div class="col-12 text-center col-lg-6 text-lg-start">
-          <h2 class="info3">Información de contacto</h2>
-          <p class="info">También podes contactarnos por los siguientes canales de atención:</p>
-          <ul class="info2">
+          <h2 class="titulo-info">Información de contacto</h2>
+          <p class="parrafo-info">También podes contactarnos por los siguientes canales de atención:</p>
+          <ul class="lista-info">
             <li>Dirección: Beruti 294</li>
             <li>Teléfono: 03489 427153</li>
             <li>WhatsApp: +54 9 3489455046</li>
             <li>E mail: radiussa@gmail.com</li>
           </ul>
-          <h2 class="info3">Horarios de atención</h2>
-          <p class="info">Lunes a viernes de 8 a 19 hs. Sabados y domingos cerrado.</p>
+          <h2 class="titulo-info">Horarios de atención</h2>
+          <p class="parrafo-info">Lunes a viernes de 8 a 19 hs. Sabados y domingos cerrado.</p>
         </div>
         <div class="col-12 text-center col-lg-6 text-lg-center">
           <img src="../imagenes/foto 4.jpg" alt="frente radius" class="img-fluid img-thumbnail">
