--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span></button>
         <div id="menu" class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-3">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item menu"><a href="./index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="./pages/staffmedico.html" class="nav-link">Staff Médico</a></li>
             <li class="nav-item"><a href="./pages/estudios.html" class="nav-link">EstudiosMédicos</a>
