--- a/pages/staffmedico.html
+++ b/pages/staffmedico.html
@@ -20,11 +20,11 @@
         <header class="header container-fluid">
             <nav class="navbar navbar-expand-lg fs-4">
               <div class="container fluid">
-                  <a href="#" class="navbar-brand">Radius</a>
+                  <a href="../index.html" alt="logo" class="navbar-brand"> <img src="../logo/logoradius.jpeg" alt="logoempresa" class="logo"></a>
                   <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
                   <span class="navbar-toggler-icon"></span></button>
                   <div id="menu" class="collapse navbar-collapse">
-                      <ul class="navbar-nav ms-3">
+                      <ul class="navbar-nav ms-auto">
                           <li class="nav-item"><a href="../index.html" class="nav-link" class="menu">Home</a></li>
                           <li class="nav-item"><a href="./staffmedico.html" class="nav-link" class="menu">Staff Médico</a></li>
                           <li class="nav-item"><a href="./estudios.html" class="nav-link" class="menu">Estudios Médicos</a>
