--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -26,7 +26,7 @@
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
                     <span class="navbar-toggler-icon"></span></button>
                 <div id="menu" class="collapse navbar-collapse">
-                    <ul class="navbar-nav ms-3">
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a href="../index.html" class="nav-link" class="menu">Home</a></li>
                         <li class="nav-item"><a href="./staffmedico.html" class="nav-link" class="menu">Staff
                                 Médico</a></li>
