--- a/pages/cobertura.html
+++ b/pages/cobertura.html
@@ -15,14 +15,15 @@
   700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
   400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <title>Radius</title>
+  <title>Radius | Cobertura</title>
 </head>
 
 <body>
   <header class="header container-fluid">
     <nav class="navbar navbar-expand-lg fs-4">
       <div class="container fluid">
-        <a href="#" class="navbar-brand">Radius</a>
+
+        <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa" class="logo"></a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span></button>
         <div id="menu" class="collapse navbar-collapse">
@@ -40,49 +41,49 @@
 
   </header>
   <main>
-      <section class="container">
-        <div class="row">
-          <a href="https://api.whatsapp.com/send?phone=5493489455046" class="boton" target="_blank">
-            <i class="fa fa-whatsapp mi-boton"></i>
-            </a>
+    <section class="container">
+      <div class="row">
+        <a href="https://api.whatsapp.com/send?phone=5493489455046" class="boton" target="_blank">
+          <i class="fa fa-whatsapp mi-boton"></i>
+        </a>
       </div>
-  
+
     </section>
-    <section class="container-fluid text-center">
+    <section class="container-fluid">
 
       <h1>Cobertura médica</h1>
       <div class="row">
-      <ul class="col-12 col-lg-4 lista">
-        <li>Accord Salud</li>
-        <li>Amffa</li>
-        <li>APM (Agente de propaganda médica)</li>
-        <li>Apsot</li>
-        <li>Banco provincia</li>
-        <li>CASA</li>
-        <li>Cobertec</li>
-        <li>Colegio de escribanos (provincia)</li>
-        <li>COMEI</li>
-      </ul>
-      <ul class="col-12 col-lg-4 lista">
-       
-        <li>Dasmi</li>
-        <li>Dasuten</li>
-        <li>Federada Salud</li>
-        <li>Galeno</li>
-        <li>Jerarquicos Salud</li>
-        <li>Medife</li>
-        <li>Medicus</li>
-      </ul>
         <ul class="col-12 col-lg-4 lista">
-        <li>Omint</li>
-        <li>Osde</li>
-        <li>Osdipp</li>
-        <li>Patrones de Cabotaje</li>
-        <li>Prevencion Salud</li>
-        <li>Sancor Salud</li>
-        <li>Swiss Medical</li>
-      </ul>
-    </div>
+          <li>Accord Salud</li>
+          <li>Amffa</li>
+          <li>APM (Agente de propaganda médica)</li>
+          <li>Apsot</li>
+          <li>Banco provincia</li>
+          <li>CASA</li>
+          <li>Cobertec</li>
+          <li>Colegio de escribanos (provincia)</li>
+          <li>COMEI</li>
+        </ul>
+        <ul class="col-12 col-lg-4 lista">
+
+          <li>Dasmi</li>
+          <li>Dasuten</li>
+          <li>Federada Salud</li>
+          <li>Galeno</li>
+          <li>Jerarquicos Salud</li>
+          <li>Medife</li>
+          <li>Medicus</li>
+        </ul>
+        <ul class="col-12 col-lg-4 lista">
+          <li>Omint</li>
+          <li>Osde</li>
+          <li>Osdipp</li>
+          <li>Patrones de Cabotaje</li>
+          <li>Prevencion Salud</li>
+          <li>Sancor Salud</li>
+          <li>Swiss Medical</li>
+        </ul>
+      </div>
     </section>
   </main>
   <footer class="container-fluid text-center">
