--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -14,15 +14,16 @@
   400&family=Lora:ital,wght@1,400;1,600;1,700&family=Montserrat:ital,wght@0,400;0,600;1,
   700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
   400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <title>Radius</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <title>Radius | Estudios</title>
 </head>
 
 <body>
     <header class="header container-fluid">
         <nav class="navbar navbar-expand-lg fs-4">
             <div class="container fluid">
-                <a href="#" class="navbar-brand">Radius</a>
+                <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa"
+                        class="logo"></a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
                     <span class="navbar-toggler-icon"></span></button>
                 <div id="menu" class="collapse navbar-collapse">
@@ -46,61 +47,61 @@
     <main>
         <section class="container">
             <div class="row">
-              <a href="https://api.whatsapp.com/send?phone=5493489455046" class="boton" target="_blank">
-                <i class="fa fa-whatsapp mi-boton"></i>
+                <a href="https://api.whatsapp.com/send?phone=5493489455046" class="boton" target="_blank">
+                    <i class="fa fa-whatsapp mi-boton"></i>
                 </a>
-          </div>
-      
+            </div>
+
         </section>
         <section class="container-fluid text-center">
             <h1>Estudios médicos</h1>
             <div class="row estudios">
                 <div class="col-12 col-lg-3 text-lg-start">
-                <h2 class="titulo-h2">Radiología Digital</h2>
-                <ul class="estudios-ul">
-                    <li>Radiografia general</li>
-                </ul>
-            </div>
-            <div class="col-12 col-lg-3 text-lg-start">
-                <h2 class="titulo-h2">Ecografia General</h2>
-                <ul class="estudios-ul">
-                    <li class=" liestudios">Ecografia de abdomen</li>
-                    <li>Ecografía renal</li>
-                    <li>Ecografía vesical/vesicoprostática</li>
-                    <li>Ecografia testicular</li>
-                    <li>Ecografia de tiroides</li>
-                    <li>Ecografia ginecologica/obstetrica/TV</li>
-                    <li>Ecografia de partes blandas</li>
-                    <li>Ecografia de caderas</li>
-                    <li>Ecografia de parótidas</li>
-                    <li>Ecografía cerebral</li>
-                </ul>
-            </div>
-            <div class="col-12 col-lg-3 text-lg-start">
-                <h2 class="titulo-h2">Eco Doppler color</h2>
-                <ul class="estudios-ul">
-                    <li>Doppler venoso/arterial de MMII/MMSS</li>
-                    <li>Doppler de carótidas</li>
-                    <li>Doppler de partes blandas</li>
-                    <li>Doppler tiroideo</li>
-                    <li>Doppler testicular</li>
-                    <li>Doppler obstetrico</li>
-                    <li>Scan fetal</li>
-                </ul>
-            </div>
-            <div class="col-12 col-lg-3 text-lg-start">
-                <h2 class="titulo-h2">Estudios mamarios</h2>
-                <ul class="estudios-ul">
-                    <li>Ecografia mamaria</li>
-                    <li>Mamografia digital</li>
-                    <li>Doppler mamario</li>
-                    <li>Técnica de magnificación</li>
-                    <li>Técnica de Eklund</li>
-                    <li>Punción mamaria (CORE biopsy)</li>
-                    <li>Punción mamaria (PAAF)</li>
-                    <li>Marcación mamaria prequirúrgica con carbón</li>
-                </ul>
-            </div>
+                    <h2 class="titulo-h2">Radiología Digital</h2>
+                    <ul class="estudios-ul">
+                        <li>Radiografia general</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-lg-3 text-lg-start">
+                    <h2 class="titulo-h2">Ecografia General</h2>
+                    <ul class="estudios-ul">
+                        <li class=" liestudios">Ecografia de abdomen</li>
+                        <li>Ecografía renal</li>
+                        <li>Ecografía vesical/vesicoprostática</li>
+                        <li>Ecografia testicular</li>
+                        <li>Ecografia de tiroides</li>
+                        <li>Ecografia ginecologica/obstetrica/TV</li>
+                        <li>Ecografia de partes blandas</li>
+                        <li>Ecografia de caderas</li>
+                        <li>Ecografia de parótidas</li>
+                        <li>Ecografía cerebral</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-lg-3 text-lg-start">
+                    <h2 class="titulo-h2">Eco Doppler color</h2>
+                    <ul class="estudios-ul">
+                        <li>Doppler venoso/arterial de MMII/MMSS</li>
+                        <li>Doppler de carótidas</li>
+                        <li>Doppler de partes blandas</li>
+                        <li>Doppler tiroideo</li>
+                        <li>Doppler testicular</li>
+                        <li>Doppler obstetrico</li>
+                        <li>Scan fetal</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-lg-3 text-lg-start">
+                    <h2 class="titulo-h2">Estudios mamarios</h2>
+                    <ul class="estudios-ul">
+                        <li>Ecografia mamaria</li>
+                        <li>Mamografia digital</li>
+                        <li>Doppler mamario</li>
+                        <li>Técnica de magnificación</li>
+                        <li>Técnica de Eklund</li>
+                        <li>Punción mamaria (CORE biopsy)</li>
+                        <li>Punción mamaria (PAAF)</li>
+                        <li>Marcación mamaria prequirúrgica con carbón</li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
