--- a/pages/staffmedico.html
+++ b/pages/staffmedico.html
@@ -14,13 +14,13 @@
   700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
   400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <title>Radius</title>
+    <title>Radius | Staff Medico</title>
 </head>
 <body>
         <header class="header container-fluid">
             <nav class="navbar navbar-expand-lg fs-4">
               <div class="container fluid">
-                  <a href="../index.html" alt="logo" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa" class="logo"></a>
+                  <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa" class="logo"></a>
                   <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
                   <span class="navbar-toggler-icon"></span></button>
                   <div id="menu" class="collapse navbar-collapse">
@@ -66,7 +66,7 @@
             </dt>
             <dd>
               <p class="staffmedico-p" class="col-12">Médico especialista en diagnóstico por imágenes.</p>
-              <img src="../imagenes/ale.jpeg" alt="doctor" class="img-thumbnail text-center foto">
+              <img src="../imagenes/jorge.jpg" alt="doctor" class="img-thumbnail text-center foto">
             </dd>
           </div>
           <div class="col-12 text-center col-lg-4 text-lg-center">
@@ -75,7 +75,7 @@
             </dt>
             <dd>
               <p class="staffmedico-p" class="col-12">Médico especialista en diagnóstico por imágenes.</p>
-              <img src="../imagenes/ale.jpeg" alt="doctor" class="img-thumbnail text-center foto">
+              <img src="../imagenes/lucas.jpg" alt="doctor" class="img-thumbnail text-center foto">
             </dd>
           </div>
 
