--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
   400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <title>Radius</title>
+  <title>Radius | Inicio</title>
 </head>
 
 <body>
   <header class="header container-fluid">
     <nav class="navbar navbar-expand-lg">
       <div class="container fluid">
-        <a href="#" class="navbar-brand">Radius</a>
+        <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa" class="logo"></a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span></button>
         <div id="menu" class="collapse navbar-collapse">
@@ -45,10 +45,10 @@
       <div class="row">
         <a href="https://api.whatsapp.com/send?phone=5493489455046" class="boton" target="_blank">
           <i class="fa fa-whatsapp mi-boton"></i>
-          </a>
-    </div>
+        </a>
+      </div>
 
-  </section>
+    </section>
     <section class="container-fluid text-center portada">
       <div class="row">
         <h1 class="col-12 portada-h1">DIAGNÓSTICO MEDICO POR IMÁGENES</h1>
@@ -80,36 +80,37 @@
       96685248506748!3d-34.16164674174783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb724a90b0
       2a5f%3A0xd18e055c7200a506!2sBeruti%20294%2C%20Campana%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!
       1ses!2sar!4v1654371668489!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen=""
-            loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="mimapa" class="d-block mx-auto ubicacion-mapa"></iframe>
+            loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="mimapa"
+            class="d-block mx-auto ubicacion-mapa"></iframe>
         </div>
 
         <div class="col-12 col-lg-6 text-lg-start">
           <h3 class="titulo-info">Información de contacto</h3>
           <ul class="informacion-index">
-            <li>Dirección: Beruti 294</li>
-            <li>Teléfono: 03489 427153</li>
-            <li>WhatsApp: +54 9 3489455046</li>
-            <li>E mail: radiussa@gmail.com</li>
-            <li>Horarios de Atención: Lunes a viernes de 8 a 19 hs.</li>
+            <li><img src="./iconos/location.svg" class="location">Dirección: Beruti 294</li>
+            <li><img src="./iconos/phone.svg" class="phone">Teléfono: 03489 427153</li>
+            <li><img src="./iconos/whatsapp.svg" class="wapp"> +54 9 3489455046</li>
+            <li><img src="./iconos/mail.svg" class="mail">E mail: radiussa@gmail.com</li>
+            <li><img src="./iconos/calendar.svg" class="calendar">Horarios de Atención: Lunes a viernes de 8 a 19 hs.</li>
           </ul>
         </div>
     </section>
 
-    </main>
+  </main>
 
-    <footer class="container-fluid text-center">
-      <div class="row eslogan">
-        <p class="col-12">Diagnóstico por Imágenes.</p>
-        <p class="col-12">Excelencia médica.</p>
-      </div>
-      <div class="row dweb">
-        <p class="col-12"> Desarrollo by The Blue Team.</p>
-        <p class="col-12">Todos los derechos reservados.</p>
-      </div>
-    </footer>
+  <footer class="container-fluid text-center">
+    <div class="row eslogan">
+      <p class="col-12">Diagnóstico por Imágenes.</p>
+      <p class="col-12">Excelencia médica.</p>
+    </div>
+    <div class="row dweb">
+      <p class="col-12"> Desarrollo by The Blue Team.</p>
+      <p class="col-12">Todos los derechos reservados.</p>
+    </div>
+  </footer>
 
 
-    <script src="./js/bootstrap.js"></script>
+  <script src="./js/bootstrap.js"></script>
 </body>
 
 </html>
