--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,14 +16,14 @@
   400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-  <title>Radius</title>
+  <title>Radius | Contacto</title>
 </head>
 
 <body>
   <header class="header container-fluid">
     <nav class="navbar navbar-expand-lg fs-4">
       <div class="container fluid">
-        <a href="#" class="navbar-brand">Radius</a>
+        <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa" class="logo"></a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span></button>
         <div id="menu" class="collapse navbar-collapse">
@@ -49,14 +49,14 @@
       <div class="row">
         <a href="https://api.whatsapp.com/send?phone=5493489455046" class="boton" target="_blank">
           <i class="fa fa-whatsapp mi-boton"></i>
-          </a>
-    </div>
+        </a>
+      </div>
 
-  </section>
+    </section>
     <div class="container-fluid text-center">
-    <h1>Formulario de contacto</h1>
-    <p class="form-p">Déjanos tu consulta y te responderemos a la brevedad posible.</p>
-  </div>
+      <h1>Formulario de contacto</h1>
+      <p class="form-p">Déjanos tu consulta y te responderemos a la brevedad posible.</p>
+    </div>
     <div class="container">
       <form class="row form g-3">
 
@@ -112,9 +112,9 @@
         </div>
         <div class="col-12 text-center col-lg-6 text-lg-center">
           <img src="../imagenes/foto 4.jpg" alt="frente radius" class="img-fluid img-thumbnail">
-      
 
-      </div>
+
+        </div>
     </section>
 
   </main>
