agregue mapa, agregue titulos en paginas, agregue iconos redes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
   400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <meta name="description" content="Centro de diagnóstico medico por imágenes, 
+  realizamos ecografia, doppler, estudios mamarios, radiografias. Nos econtramos en Zona Norte, Campana. Buenos Aires">
   <title>Radius | Inicio</title>
 </head>
 
@@ -63,10 +65,10 @@
           Desde 1999 hemos cimentado las bases para brindar el mejor
           servicio de diagnóstico
           por imágenes de la zona. Contamos con profesionales de alto renombre, altamente preparados en el área
-          y con mas de 25 años de experiencia.
+          y con mas de 30 años de experiencia.
           Radius nació bajo la filosofía de la excelencia médica apuntando siempre a mantener a nuestros
           profesionales capacitados y contando con la mejor tecnología de imágenes para brindarle a
-          nuestros pacientes un servicio altamente cualificado.
+          nuestros pacientes un servicio altamente calificado.
         </p>
       </div>
     </section>
@@ -89,12 +91,13 @@
           <ul class="informacion-index">
             <li><img src="./iconos/location.svg" class="location">Dirección: Beruti 294</li>
             <li><img src="./iconos/phone.svg" class="phone">Teléfono: 03489 427153</li>
-            <li><img src="./iconos/whatsapp.svg" class="wapp"> +54 9 3489455046</li>
+            <li><img src="./iconos/whatsapp.svg" class="wapp">WhatsApp +54 9 3489455046</li>
             <li><img src="./iconos/mail.svg" class="mail">E mail: radiussa@gmail.com</li>
             <li><img src="./iconos/calendar.svg" class="calendar">Horarios de Atención: Lunes a viernes de 8 a 19 hs.</li>
           </ul>
         </div>
     </section>
+
 
   </main>
 
