--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -15,6 +15,7 @@
   700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
   400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <meta name="description" content="Realizamos radiologia digital, ecografias, doppler color, estudios mamarios, punciones mamarias, Campana, Buenos Aires">
     <title>Radius | Estudios</title>
 </head>
 
@@ -51,21 +52,21 @@
                     <i class="fa fa-whatsapp mi-boton"></i>
                 </a>
             </div>
-
         </section>
-        <section class="container-fluid text-center">
+        
+        <section class="container-fluid">
             <h1>Estudios médicos</h1>
             <div class="row estudios">
-                <div class="col-12 col-lg-3 text-lg-start">
+                <div class="col-12 col-lg-3 text-lg-center">
                     <h2 class="titulo-h2">Radiología Digital</h2>
                     <ul class="estudios-ul">
                         <li>Radiografia general</li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-3 text-lg-start">
+                <div class="col-12 col-lg-3 text-lg-center">
                     <h2 class="titulo-h2">Ecografia General</h2>
                     <ul class="estudios-ul">
-                        <li class=" liestudios">Ecografia de abdomen</li>
+                        <li>Ecografia de abdomen</li>
                         <li>Ecografía renal</li>
                         <li>Ecografía vesical/vesicoprostática</li>
                         <li>Ecografia testicular</li>
@@ -77,7 +78,7 @@
                         <li>Ecografía cerebral</li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-3 text-lg-start">
+                <div class="col-12 col-lg-3 text-lg-center">
                     <h2 class="titulo-h2">Eco Doppler color</h2>
                     <ul class="estudios-ul">
                         <li>Doppler venoso/arterial de MMII/MMSS</li>
@@ -89,7 +90,7 @@
                         <li>Scan fetal</li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-3 text-lg-start">
+                <div class="col-12 col-lg-3 text-lg-center">
                     <h2 class="titulo-h2">Estudios mamarios</h2>
                     <ul class="estudios-ul">
                         <li>Ecografia mamaria</li>
