--- a/pages/staffmedico.html
+++ b/pages/staffmedico.html
@@ -14,7 +14,8 @@
   700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
   400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <title>Radius | Staff Medico</title>
+  <meta name="description" content="Especialistas en diagnóstico por imágenes. Traumatologia infantil, Psquiatria infantil, Mastología">
+  <title>Radius | Staff Medico</title>
 </head>
 <body>
         <header class="header container-fluid">
@@ -57,7 +58,7 @@
             </dt>
             <dd>
               <p class="staffmedico-p" class="col-12">Médica especialista en diagnóstico mamario por imágenes</p>
-            <img src="../imagenes/ale.jpeg" alt="doctora" class="img-thumbnail foto">
+              <img src="../imagenes/ale.jpeg" alt="doctora" class="img-thumbnail foto">
             </dd>
           </div>
           <div class="col-12 text-center col-lg-4 text-lg-center">
