--- a/pages/cobertura.html
+++ b/pages/cobertura.html
@@ -15,6 +15,7 @@
   700&family=Nuosu+SIL&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,
   400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <meta name="description" content="Atendemos por obras sociales y prepagas, atencion paticular y por reintegro">
   <title>Radius | Cobertura</title>
 </head>
 
