--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header class="header container-fluid">
     <nav class="navbar navbar-expand-lg">
       <div class="container fluid">
-        <a href="../index.html" class="navbar-brand"> <img src="../logo/logo.png" alt="logoempresa" class="logo"></a>
+        <a href="./index.html" class="navbar-brand"> <img src="./logo/logo.png" alt="logoempresa" class="logo"></a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
           <span class="navbar-toggler-icon"></span></button>
         <div id="menu" class="collapse navbar-collapse">
