arregle mapa en mobile y relice cambios de diseño

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
       2a5f%3A0xd18e055c7200a506!2sBeruti%20294%2C%20Campana%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!
       1ses!2sar!4v1654371668489!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen=""
             loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="mimapa"
-            class="d-block mx-auto ubicacion-mapa"></iframe>
+            class="col-12 text-center mapa"></iframe>
         </div>
 
-        <div class="col-12 col-lg-6 text-lg-start">
+        <div class="col-12 text-start col-lg-6 text-lg-start">
           <h3 class="titulo-info">Información de contacto</h3>
           <ul class="informacion-index">
             <li><img src="./iconos/location.svg" class="location">Dirección: Beruti 294</li>
