agregue estilos en index y estudios

--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -57,13 +57,13 @@
         <section class="container-fluid">
             <h1>Estudios médicos</h1>
             <div class="row estudios">
-                <div class="col-12 col-lg-3 text-lg-center">
+                <div class="col-12 text-center col-lg-3 text-lg-center">
                     <h2 class="titulo-h2">Radiología Digital</h2>
                     <ul class="estudios-ul">
                         <li>Radiografia general</li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-3 text-lg-center">
+                <div class="col-12 text-center col-lg-3 text-lg-center">
                     <h2 class="titulo-h2">Ecografia General</h2>
                     <ul class="estudios-ul">
                         <li>Ecografia de abdomen</li>
@@ -78,7 +78,7 @@
                         <li>Ecografía cerebral</li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-3 text-lg-center">
+                <div class="col-12 text-center col-lg-3 text-lg-center">
                     <h2 class="titulo-h2">Eco Doppler color</h2>
                     <ul class="estudios-ul">
                         <li>Doppler venoso/arterial de MMII/MMSS</li>
@@ -90,7 +90,7 @@
                         <li>Scan fetal</li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-3 text-lg-center">
+                <div class="col-12 text-center col-lg-3 text-lg-center">
                     <h2 class="titulo-h2">Estudios mamarios</h2>
                     <ul class="estudios-ul">
                         <li>Ecografia mamaria</li>
@@ -119,7 +119,13 @@
 
 
 
-
+    <script>
+        // When the user clicks on <div>, open the popup
+        function myFunction() {
+          var popup = document.getElementById("myPopup");
+          popup.classList.toggle("show");
+        }
+        </script>
 
     <script src="../js/bootstrap.js"></script>
 </body>
