agregue grid en pagina cobertura

--- a/pages/cobertura.html
+++ b/pages/cobertura.html
@@ -50,11 +50,12 @@
       </div>
 
     </section>
-    <section class="container-fluid">
+    <section>
 
       <h1>Cobertura médica</h1>
-      <div class="row">
-        <ul class="col-12 col-lg-4 lista">
+      <div>
+        <ul class="cobertura">
+          <div class="cobertura-1">
           <li>Accord Salud</li>
           <li>Amffa</li>
           <li>APM (Agente de propaganda médica)</li>
@@ -64,18 +65,15 @@
           <li>Cobertec</li>
           <li>Colegio de escribanos (provincia)</li>
           <li>COMEI</li>
-        </ul>
-        <ul class="col-12 col-lg-4 lista">
-
           <li>Dasmi</li>
           <li>Dasuten</li>
           <li>Federada Salud</li>
+        </div>
+        <div class="cobertura-2">
           <li>Galeno</li>
           <li>Jerarquicos Salud</li>
           <li>Medife</li>
           <li>Medicus</li>
-        </ul>
-        <ul class="col-12 col-lg-4 lista">
           <li>Omint</li>
           <li>Osde</li>
           <li>Osdipp</li>
@@ -83,6 +81,7 @@
           <li>Prevencion Salud</li>
           <li>Sancor Salud</li>
           <li>Swiss Medical</li>
+        </div>
         </ul>
       </div>
     </section>
